internal/translate/testdata/port-by-name/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: named-port
  namespace: default
spec:
  ingressClassName: ingressive
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
