internal/translate/testdata/port-by-name/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 9090
      targetPort: 9090
